# bahea-cal

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  fetch.py  get-pip.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.ebextensions/: 01_packages.config  cron-linux.config  db-migrate.config  django.config  shell.config
.github/workflows/: workflow-build-images.yml  workflow-deploy-digitalocean.yml  workflow-deploy.yml  workflow-fe-deploy.yml  workflow-test-front.yml  workflow-test.yml  workflowfront.test.yml
api/: app.py  urls.py  views.py
bahea-cal/: production.py
bahea_cal/: fetch.py  parse.py  schedule.py
core/: admin.py  apps.py  middleware.py  models.py  receivers.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_team_ref.py  0003_alter_match_unique_together.py  0004_championship_created_championship_modified_and_more.py
core/templates/core/: error.html  home.html  privacy.html  success.html  terms.html
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  FormSettings.jsx  Login.jsx  UserSettings.jsx  index.css  index.jsx
frontend/src/components/: Club.jsx  Time.js  UserSettings.jsx  googleCalendar.js
frontend/src/routes/: Time.jsx
settings/: production.py
tests/api/: test_views.py
tests/users/: test_services.py
users/: admin.py  apps.py  models.py  receivers.py  serializer.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_usercredential_client_id.py  0003_user_created_user_modified_usercredential_created_and_more.py  0004_user_calendar_id.py
users/templates/users/: confirmed.html
webapp/: asgi.py  secrets.py  settings.py  urls.py  wsgi.py
