[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bahea-cal"
dynamic = ["version"]
description = 'Bahea Calendar is a project that adds the standings of your favorite soccer team games to your google calendar!'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ivan Neto", email = "ivan.cr.neto@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "oauth2client==4.1.3",
  "attrs==23.2.0",
  "google-api-python-client==2.119.0",
  "beautifulsoup4==4.12.3",
  "arrow==1.3.0",
  "requests==2.31.0",
  "Django==5.0.2",
  "dynaconf==3.2.4",
]

[project.urls]
Documentation = "https://github.com/ivancrneto/bahea-cal#readme"
Issues = "https://github.com/ivancrneto/bahea-cal/issues"
Source = "https://github.com/ivancrneto/bahea-cal"

[tool.hatch.version]
path = "bahea_cal/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:bahea_cal tests}"

[tool.coverage.run]
source_pkgs = ["bahea_cal", "tests"]
branch = true
parallel = true
omit = [
  "bahea_cal/__about__.py",
]

[tool.coverage.paths]
bahea_cal = ["bahea_cal", "*/bahea-cal/bahea_cal"]
tests = ["tests", "*/bahea-cal/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
